<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20sp"
    tools:context="com.example.sushiko.topten.ShowActivity">

    <TextView
        android:id="@+id/profile_event_tv"
        android:layout_marginTop="60sp"
        android:textSize="30sp"
        android:text="@string/event_name"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/profile_location_tv"
        android:layout_below="@+id/profile_event_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/location"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/profile_date_tv"
        android:layout_below="@+id/profile_location_tv"
        android:layout_marginTop="10sp"
        android:textSize="22sp"
        android:text="@string/date_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
     <Button
         android:id="@+id/buy_button"
         android:layout_toEndOf="@+id/profile_date_tv"
         android:layout_below="@+id/profile_location_tv"
         android:layout_marginStart="25sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/buy_button" />

    <TextView
        android:id="@+id/profile_info_tv"
        android:layout_below="@+id/profile_date_tv"
        android:layout_marginTop="25sp"
        android:textSize="25sp"
        android:text="@string/lorem_ipsum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>
